--- a/incrowd/frontend/partials/new_post.html
+++ b/incrowd/frontend/partials/new_post.html
@@ -6,7 +6,7 @@
 
       <md-text-float label="URL" ng-model="post.url"
                      class="long"></md-text-float>
-      <select>
+      <select class="category_select">
         <option ng-repeat="category in category_list">{{ category }}</option>
       </select>
       <md-checkbox ng-model="post.nsfw" aria-label="NSFW">
