Fixing overflow in polls

--- a/incrowd/frontend/templates/poll.html
+++ b/incrowd/frontend/templates/poll.html
@@ -1,4 +1,4 @@
-<div class="large-8 small-12 columns content scroll">
+<div class="content scroll">
   <md-card class="md-whiteframe-z2 card_content">
     <h2>New Submission</h2>
 
@@ -13,9 +13,9 @@
       </md-button>
     </form>
   </md-card>
-  <md-card class="md-whiteframe-z1 submission_entry"
+  <md-card class="md-whiteframe-z1 submission_entry post"
            ng-repeat="submission in poll.poll_submissions">
-    <md-toolbar class="md-theme-light">
+    <md-toolbar class="md-toolbar-tools">
       <div class="md-toolbar-tools">
         <div class="title_container" layout="column">
           <h2 class="title">
