Migrating to ui router

--- a/incrowd/frontend/partials/image.html
+++ b/incrowd/frontend/partials/image.html
@@ -4,7 +4,7 @@
     <p>Click</p>
     <p>to show</p>
   </div>
-  <a ng-href="/#/posts/{{ post.id }}">
+  <a ng-href="#/posts/{{ post.id }}">
     <img ng-show="nsfw_show || !nsfw" ng-src="{{ post.url }}">
   </a>
 </div>
