--- a/incrowd/frontend/partials/profile_pic.html
+++ b/incrowd/frontend/partials/profile_pic.html
@@ -1,7 +1,7 @@
 <div layout="vertical">
   <div class="profile-circular">
 
-    <a href="/#/users/{{ username }}/"><img
+    <a ng-href="#/user/{{ username }}"><img
         class="profile-pic" ng-src="{{ profile_pic }}"
         title="{{ username }}"/>
     </a>
