--- a/incrowd/frontend/partials/chat.html
+++ b/incrowd/frontend/partials/chat.html
@@ -11,7 +11,7 @@
              ng-href="{{ message.attachment_url }}">
             <img scroll-chat-on-load ng-src="{{ message.attachment_url }}">
           </a>
-          <p><a class="username" ng-href="/#/users/{{message.username}}">{{message.username}}</a> | {{ message.sent | DTSince }}</p>
+          <p><a class="username" ng-href="#/user/{{message.username}}">{{message.username}}</a> | {{ message.sent | DTSince }}</p>
         </div>
       </md-item-content>
     </md-item>
