Add delete for comments

--- a/incrowd/frontend/partials/comment.html
+++ b/incrowd/frontend/partials/comment.html
@@ -7,7 +7,7 @@
     <a class="comment_attachment" ng-if="comment.attachment_url"
      ng-href="{{ comment.attachment_url }}">
     <img ng-src="{{ comment.attachment_url }}"></a>
-    <p><a class="username" ng-href="#/user/{{comment.user.username}}">{{comment.user.username}}</a> | <span ng-bind="comment.submitted | DTSince ">{{ comment.submitted | DTSince }}</span></p>
+    <p><a class="username" ng-href="#/user/{{comment.user.username}}">{{comment.user.username}}</a> | <span ng-bind="comment.submitted | DTSince ">{{ comment.submitted | DTSince }}</span><span ng-if="comment.user.id == user.id"> | <a href="" ng-click="delete_comment($index)">delete</a></span></p>
   </div>
 
 </md-item-content>
