Open links in new tab

--- a/incrowd/frontend/partials/post.html
+++ b/incrowd/frontend/partials/post.html
@@ -9,7 +9,7 @@
       </div>
       <div class="title_container" layout="column">
         <h2 class="title">
-          <a ng-if="post.type == 'link'" ng-href="{{ post.url }}">
+          <a ng-if="post.type == 'link'" target="_blank" ng-href="{{ post.url }}">
             {{ post.title }}
             <span class="icon-link icomoon link"></span>
           </a>
