--- a/incrowd/frontend/partials/post.html
+++ b/incrowd/frontend/partials/post.html
@@ -35,6 +35,10 @@
       <media></media>
     </div>
 
+    <div class="gifv" ng-switch-when="gifv">
+      <media></media>
+    </div>
+
     <div class="youtube" ng-switch-when="youtube">
       <media></media>
     </div>
