--- a/incrowd/frontend/css/posts.css
+++ b/incrowd/frontend/css/posts.css
@@ -60,7 +60,8 @@
     padding-bottom: 20px;
 }
 
-.youtube iframe {
+.youtube iframe,
+.gifv iframe {
     margin: 0 auto;
     display: block;
     max-width: 100%;
