--- a/incrowd/frontend/css/posts.css
+++ b/incrowd/frontend/css/posts.css
@@ -102,12 +102,12 @@
 }
 
 .nsfw_show {
-    /*height: 250px;*/
-    /*width: 80%;*/
     margin: 0 auto 15px auto;
     text-align: center;
     padding: 80px 0;
     background-color: #ccc;
+    width: 100%;
+    position: relative;
 }
 
 .nsfw_show p {
@@ -259,4 +259,8 @@ post div.green {
 
 .post .link {
     font-size: 65%;
+}
+
+.flex-video {
+    position: relative;
 }
