--- a/incrowd/frontend/partials/chat_input.html
+++ b/incrowd/frontend/partials/chat_input.html
@@ -1,5 +1,9 @@
 <div class="chat_input" ng-controller="ChatCtrl">
   <form name="chat_server" id="chat_form" ng-submit="send_message()">
-    <md-text-float label="Chat" ng-model="text" ng-enter="send_message()" > </md-text-float>
+    <md-input-container flex>
+      <label>Chat</label>
+      <textarea ng-model="text" ng-enter="send_message()"
+                columns="1" rows="1"></textarea>
+    </md-input-container>
   </form>
 </div>
