--- a/incrowd/frontend/css/profiles.css
+++ b/incrowd/frontend/css/profiles.css
@@ -33,8 +33,7 @@
     max-height: 400px;
     display: block;
     margin: 0 auto 10px auto;
-    max-width: 100%;
-
+    width: inherit;
 }
 
 .profile .md-button {
