--- a/incrowd/frontend/templates/signup.html
+++ b/incrowd/frontend/templates/signup.html
@@ -6,18 +6,26 @@
     <md-content class="md-padding">
 
       <form ng-submit="register()" ng-controller="SignupCtrl">
-        <md-text-float label="Username" ng-model="formData.username"
-                       focus-me="focus_input">
-        </md-text-float>
-        <md-text-float label="Password" ng-model="formData.password"
-                       type="password" focus-me="focus_input">
-        </md-text-float>
-        <md-text-float label="Email" ng-model="formData.email"
-                       type="email" focus-me="focus_input">
-        </md-text-float>
-        <md-text-float label="Invite Code" ng-model="formData.code"
-                       focus-me="focus_input">
-        </md-text-float>
+        <md-input-container>
+          <label>Username</label>
+          <input ng-model="formData.username"
+                         focus-me="focus_input">
+        </md-input-container>
+        <md-input-container>
+          <label>Password</label>
+          <input ng-model="formData.password"
+                         type="password" focus-me="focus_input">
+        </md-input-container>
+        <md-input-container>
+          <label>Email</label>
+          <input ng-model="formData.email"
+                         type="email" focus-me="focus_input">
+        </md-input-container>
+        <md-input-container>
+          <label>Invite Code</label>
+          <input ng-model="formData.code"
+                         focus-me="focus_input">
+        </md-input-container>
         <md-button class="md-raised md-primary" type="submit">
           Signup
         </md-button>
