--- a/incrowd/frontend/partials/post.html
+++ b/incrowd/frontend/partials/post.html
@@ -9,7 +9,8 @@
       </div>
       <div class="title_container" layout="column">
         <h2 class="title">
-          <a ng-if="post.type == 'link'" target="_blank" ng-href="{{ post.url }}">
+          <a ng-if="post.type == 'link'" target="_blank"
+             ng-href="{{ post.url }}">
             {{ post.title }}
             <span class="icon-link icomoon link"></span>
           </a>
@@ -30,39 +31,40 @@
       <span class="delete icon-cancel-circle icomoon"></span>
     </div>
   </md-toolbar>
-  <div ng-switch="post.type">
-    <div class="image" ng-switch-when="image">
-      <media></media>
+  <md-card-content>
+    <div ng-switch="post.type">
+      <div class="image" ng-switch-when="image">
+        <media></media>
+      </div>
+
+      <div class="gifv" ng-switch-when="gifv">
+        <media></media>
+      </div>
+
+      <div class="youtube" ng-switch-when="youtube">
+        <media></media>
+      </div>
+
+      <div class="video" ng-switch-when="video">
+        <media></media>
+      </div>
+
+      <div class="link" ng-switch-when="link">
+      </div>
+
+      <div class="text" ng-switch-default>
+      </div>
     </div>
+    <!--Metadata-->
+    <div layout="horizontal" layout-align="center" class="metadata">
 
-    <div class="gifv" ng-switch-when="gifv">
-      <media></media>
+      <md-button class="md-raised md-primary post_comments">
+        <a ng-href="#/posts/{{ post.id }}">{{ post.comment_set.length }}
+          Comments</a>
+      </md-button>
+      <span ng-bind="post.submitted | DTSince" class="non-button"></span>
+
     </div>
-
-    <div class="youtube" ng-switch-when="youtube">
-      <media></media>
-    </div>
-
-    <div class="video" ng-switch-when="video">
-      <media></media>
-    </div>
-
-    <div class="link" ng-switch-when="link">
-    </div>
-
-    <div class="text" ng-switch-default>
-    </div>
-  </div>
-  <!--Metadata-->
-  <div layout="horizontal" layout-align="center" class="metadata">
-
-    <md-button class="md-raised md-primary post_comments">
-      <a ng-href="#/posts/{{ post.id }}">{{ post.comment_set.length }}
-        Comments</a>
-    </md-button>
-    <span ng-bind="post.submitted | DTSince" class="non-button"></span>
-
-  </div>
-
+  </md-card-content>
   <!--End Metadata-->
 </div>
