--- a/incrowd/frontend/partials/chat_input.html
+++ b/incrowd/frontend/partials/chat_input.html
@@ -1,6 +1,6 @@
 <div class="chat_input" ng-controller="ChatCtrl">
   <form name="chat_server" id="chat_form" ng-submit="send_message()">
-    <md-input-container flex>
+    <md-input-container>
       <label>Chat</label>
       <textarea ng-model="text" ng-enter="send_message()"
                 columns="1" rows="1"></textarea>
