Fix flex messing with textarea container on FF

--- a/incrowd/frontend/css/chat.css
+++ b/incrowd/frontend/css/chat.css
@@ -192,3 +192,7 @@ chatinput {
 .chat_background_alternate {
     background-color: #eee;
 }
+
+md-input-container .md-input {
+    flex: 1 1 -moz-available;
+}
