Use global posts css for images in polls

--- a/incrowd/frontend/css/poll.css
+++ b/incrowd/frontend/css/poll.css
@@ -1,12 +1,12 @@
 /*!
  * poll.css
  */
-.submission_entry .image {
-    display: block;
-    margin: auto;
-    height: 400px;
-    max-width: 100%;
-}
+/*.submission_entry .image {*/
+    /*display: block;*/
+    /*margin: auto;*/
+    /*height: 400px;*/
+    /*max-width: 100%;*/
+/*}*/
 
 .metadata .md-button {
     font-size: 110%;
