Allowing Docker envvars to override settings, starting reset password

--- a/incrowd/frontend/templates/login.html
+++ b/incrowd/frontend/templates/login.html
@@ -32,7 +32,7 @@
           Login
         </md-button>
 
-        <md-button href="accounts/password/reset/">Forgot your password?
+        <md-button href="#/users/reset_password">Forgot your password?
         </md-button>
       </form>
     </md-content>
