Updates all around, fixes, splitting the app up more

--- a/incrowd/frontend/partials/comment.html
+++ b/incrowd/frontend/partials/comment.html
@@ -1,6 +1,6 @@
 <md-item-content>
   <div class="md-tile-left">
-    <profile-pic id="comment.user"></profile-pic>
+    <profile-pic id="comment.user.id"></profile-pic>
   </div>
   <div class="md-tile-content">
     <span class="text" compile="comment.text"></span>
