--- a/incrowd/frontend/src/components/comment/comment.html
+++ b/incrowd/frontend/src/components/comment/comment.html
@@ -3,7 +3,7 @@
     <profile-pic id="comment.user.id"></profile-pic>
   </div>
   <div class="md-tile-content">
-    <span class="text" compile="comment.text"></span>
+    <span class="text" ng-bind="comment.text"></span>
     <a class="comment_attachment" ng-if="comment.attachment_url"
      ng-href="{{ comment.attachment_url }}">
     <img ng-src="{{ comment.attachment_url }}"></a>
