--- a/incrowd/frontend/src/templates/chat.html
+++ b/incrowd/frontend/src/templates/chat.html
@@ -9,5 +9,5 @@
   <md-content flex id="chat_container">
     <chat></chat>
   </md-content>
-  <chatinput></chatinput>
+  <chat-input></chat-input>
 </div>
